[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/WO84-wu-X1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/explosion_big.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Shooter.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.05139

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.38512
height = 4.14593

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.45363
height = 4.12945

[sub_resource type="CircleShape2D" id=4]
radius = 10.3622

[sub_resource type="CapsuleShape2D" id=5]
radius = 2.4375
height = 5.93999

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.68388
height = 5.37574

[sub_resource type="CircleShape2D" id=7]
radius = 103.162

[sub_resource type="Animation" id=8]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("WO84-wu-X1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.125, 0.125 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion_big:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("explosion_big:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.125, 0.125 ), Vector2( 0.125, 0.125 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("explosion_big:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WO84-wu-X1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.125, 0.125 ) ]
}

[node name="Shooter" type="KinematicBody2D" groups=[
"Shooter",
]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.91971, -0.000283003 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 5.73858, -3.76355 )
rotation = 1.94604
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 5.739, 3.598 )
rotation = 1.19555
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 15, 0 )

[node name="DamageBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( -1.92, 0 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( 5.739, -3.764 )
rotation = 1.94604
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( 5.739, 3.598 )
rotation = 1.19555
shape = SubResource( 6 )

[node name="Shooter_Timer" type="Timer" parent="."]
wait_time = 0.35

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="Area2D"]
rotation = -1.5708
scale = Vector2( 1, 1.78 )

[node name="WO84-wu-X1" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )

[node name="explosion_big" type="Sprite" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
hframes = 9
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 8 )
anims/Idle = SubResource( 9 )

[node name="Out_of_range_timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="DamageBox" to="." method="_on_DamageBox_area_entered"]
[connection signal="body_entered" from="DamageBox" to="." method="_on_DamageBox_body_entered"]
[connection signal="timeout" from="Shooter_Timer" to="." method="_on_Shooter_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Out_of_range_timer" to="." method="_on_Out_of_range_timer_timeout"]
